[workspace]
members = ["shared", "backend", "frontend"]
resolver = "2"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
gamedig = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-stream = "0.3"
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
gloo-events = "0.2"
web-sys = { version = "0.3", features = ["EventSource", "MessageEvent"] }
# Internal crates
shared = { path = "./shared" }
