[package]
name = "status-app"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
js-sys = "0.3.85"
leptos = { version = "0.8.15", features = ["csr"] }
leptos_meta = "0.8.5"
leptos_router = "0.8.11"
log = "0.4.29"
wasm-bindgen = "0.2"
send_wrapper = "0.6"
web-sys = { version = "0.3.85", features = ["MouseEvent", "Window", "Navigator", "Clipboard", "Element", "DomRect", "Node", "HtmlElement", "EventSource", "MessageEvent"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
gloo-net = "0.6"
status-monitor = { path = "../status-monitor" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tokio-stream = { version = "0.1", features = ["sync"] }
notify = "6.1"
broadcast = "0.1"
