[package]
name = "status-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hytale-health-checker = { path = "../hytale-health-checker" }
terraria-health-checker = { path = "../terraria-health-checker" }
tokio = { version = "1.0", features = ["full"] }
