[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
gamedig = { workspace = true }
shared = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
