[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
wasm-bindgen = { workspace = true }
gloo-events = { workspace = true }
web-sys = { workspace = true }
